--- a/fomrulario/formulario.html
+++ b/fomrulario/formulario.html
@@ -4,31 +4,32 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="formulario.css" media="screen">
   <title>Cadastro</title>
 </head>
 <body>
-  <div>
-      <h1>Cadastro de DEVs</h1>
-      <p>Complete suas informações</p>
+  <div class="campo">
+      <h1 id="titulo">Cadastro de DEVs</h1>
+      <p id="subtitulo">Complete suas informações</p>
       <br>
   </div>
   <form>
-    <fieldset> <!--Junta dois campos em um-->
-      <div>
-        <label>Nome</label>
-        <input type="text" name="nome" id="nome">
+    <fieldset class="grupo"> <!--Junta dois campos em um-->
+      <div class="campo">
+        <label for="nome"><strong>Nome</strong></label>
+        <input type="text" name="nome" id="nome" required>
       </div>
-      <div>
-        <label>Sobrenome</label>
-        <input type="text" name="sobrenome" id="sobrenome">
+      <div class="campo">
+        <label for="sobrenome"><strong>Sobrenome</strong></label>
+        <input type="text" name="sobrenome" id="sobrenome" required>
       </div>
     </fieldset> 
-    <div>
-      <label>Email</label>
-      <input type="email" name="email" id="email">
+    <div class="campo">
+      <label for="email"><strong>Email</strong></label>
+      <input type="email" name="email" id="email" required>
     </div>
 
-    <div>
+    <div class="campo">
       <label>De qual lado da aplicação você desenvolve?</label>
       <label>
         <input type="radio" name="devweb" value="Frontend" checked>Front-end
@@ -41,8 +42,8 @@
       </label>
     </div>
 
-    <div>
-      <label>Senioridade</label>
+    <div class="campo">
+      <label for="senioridade">Senioridade</label>
       <select id="senioridade">
         <option selected disabled value="">Selecione...</option>
         <option>Junior</option>
@@ -51,8 +52,8 @@
       </select>
     </div>
 
-    <fieldset>
-      <div>
+    <fieldset class="grupo">
+      <div id="check">
         <label>Selecione as tecnologias que utiliza:</label><br><br>
         <input type="checkbox" id="tecnologia1" name="tecnologia1" value="HTML">
         <label for="tecnologia1">HTML</label>
@@ -71,10 +72,10 @@
       </div>
     </fieldset>
 
-    <div>
+    <div class="campo">
       <label>Conte um pouco da sua experiência:</label>
       <textarea row="6" style="width: 26em" id="experiencia" name="experiencia"></textarea><br>
-      <button type="submit">Concluído</button> </button>
+      <button class="botao" type="submit">Concluído</button> </button>
     </div>
 
     
